--- a/PAC1/src/style.css
+++ b/PAC1/src/style.css
@@ -434,15 +434,13 @@ iframe {
     width: 100%;
     max-width: 560px;
     aspect-ratio: 16 / 9;
-    margin: 2rem auto; /* centrat horitzontal i separació vertical */
+    margin: 2rem auto;
     cursor: pointer;
     background-size: cover !important;
     background-repeat: no-repeat !important;
     background-position: center center !important;
     position: relative;
     overflow: hidden;
-    border-radius: 8px; /* opcional, per fer-ho més polit */
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* opcional */
 }
 
 #iframeonclick, #iframeonclick2 {
