modificació logo height 29/05

--- a/PAC1/src/style.css
+++ b/PAC1/src/style.css
@@ -57,7 +57,7 @@ a {
 
 .logo-menu img {
     width: 150px;
-    height: auto;
+    height: 34.17px;
 }
 /* -------- Hamburguesa i menú -------- */
 .menu-toggle {
